Sat Dec 14 16:26:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rubylibprefix): replace exec_prefix as well as
	  bindir and libdir.  a patch by kimuraw (Wataru Kimura) at
	  [ruby-dev:47852].  [Bug #9160]

Sat Dec 14 14:42:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (lock_shift_log): no need to rotate the log file
	  if it has been rotated by another process.  based on the patch
	  by no6v (Nobuhiro IMAI) in [ruby-core:58620].  [Bug #9133]

Sat Dec 14 13:01:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_from_me): method by respond_to_missing? should be
	  owned by the original class.

Sat Dec 14 11:55:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/scanf.rb (IO#scanf): fix mistaken use of rescue modifier.
	  a patch by Mon_Ouie at [ruby-core:52813].  [Bug #7940]

Sat Dec 14 11:44:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_qsort): fix potential stack overflow on a large
	  machine.  based on the patch by Conrad Irwin <conrad.irwin AT
	  gmail.com> at [ruby-core:51816].  [Bug #7772]

Sat Dec 14 11:25:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_const_defined): support nested class path as
	  well as const_get.  [Feature #7414]

Sat Dec 14 01:31:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_rescue2): reuse tags pushed for body proc to protect
	  rescue proc too.

Sat Dec 14 01:15:51 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (wmap_final_func): Bugfix. Should update *value to new pointer.

Sat Dec 14 01:05:46 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: Don't test $! in "ensure" clause because
	  it may be set before the body.
	  Reported by ko1 and mrkn.  [ruby-core:59088] [Bug #9247]

	* lib/cgi/core.rb: Ditto.

	* lib/drb/ssl.rb: Ditto.

Sat Dec 14 00:34:31 2013  Naohisa Goto  <ngotogenome@gmail.com>

	* internal.h (ruby_sized_xrealloc2): fix typo introduced in r44117,
	  which cause compile error on Solaris.
