@@ -1,3 +1,10 @@
+Sat Dec 14 17:39:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_insnhelper.c (vm_callee_setup_arg_complex): count post
+	  arguments as mandatory arguments.  [ruby-core:57706] [Bug #8993]
+
+	* vm_insnhelper.c (vm_yield_setup_block_args): ditto.
+
 Sat Dec 14 16:26:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (rubylibprefix): replace exec_prefix as well as
